--- a/site/src/css/custom.css
+++ b/site/src/css/custom.css
@@ -17,8 +17,18 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
+:root footer {
+  background-color: #eee;
+  color: #111;
+}
+
+:root footer a {
+  color: var(--ifm-color-primary-darkest);
+  font-weight: 600;
+}
+
 /* For readability concerns, you should choose a lighter palette in dark mode. */
-[data-theme='dark'] {
+[data-theme="dark"] {
   --ifm-color-primary: #25c2a0;
   --ifm-color-primary-dark: #21af90;
   --ifm-color-primary-darker: #1fa588;
@@ -27,4 +37,8 @@
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+}
+
+html[data-theme="dark"] footer {
+  background-color: #111;
 }
